Fix letter spacing

--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -33,7 +33,7 @@ body {
 .logo__text {
     margin: 0;
     font-size: 2.5em;
-    letter-spacing: 5%;
+    letter-spacing: 0.05em;
 }
 
 .form {
